--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <main>
     <h1>Video Game Console Sales Visualization</h1> 
     <img src = "super-mario-bros-3957.jpg" alt = "Mario">
-    <p1>Nintendo Total Sales: 863,070,000 - </p1>
-    <p2>PlayStation Total Sales: 518,790,000 - </p2>
-    <p3>XBOX Total Sales: 187,000,000 - </p3>
-    <p4>Sega Total Sales: 84,500,000...</p4>
+    <p1>Nintendo Total Sales: 863,070,000 units - </p1>
+    <p2>PlayStation Total Sales: 518,790,000 units - </p2>
+    <p3>XBOX Total Sales: 187,000,000 units - </p3>
+    <p4>Sega Total Sales: 84,500,000 units...</p4>
   <body>
     <script src="sketch.js"></script>
   </body>
